# python_cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  run.sh  test.sh
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: main.py
{{ cookiecutter.project_slug }}/test/: test_tests.py
