[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
version = "0.1.0"
{% if cookiecutter.license != "" and cookiecutter.license != "None" -%}
license = { text = "{{ cookiecutter.license }}" }
{% endif -%}
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
